force-app/main/default/objects/Payment_Due__c/Payment_Due__c.object-meta.xml
<CustomObject>
    <label>Payment Due</label>
    <nameField>
        <label>Payment Due Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments Due</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>