force-app/main/default/objects/Payment_Due__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Payments Due</relationshipLabel>
    <relationshipName>Payments_Due</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>